# toolprobe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: toolprobe.yaml
src/toolprobe/: __init__.py  cli.py  diff.py  git.py  lint.py  models.py  result.py  schema.py
tests/: test_cli.py  test_diff.py  test_git.py  test_lint.py
